# BattolCity

./: .gitignore  CMakeLists.txt
внешний/glad/: CMakeLists.txt
внешний/glad/include/glad/: glad.h
внешний/glad/src/: glad.c
внешний/rapidjson/include/rapidjson/error/: en.h  error.h
исходник/: main.cpp
исходник/Игра/: Игра.cpp  Игра.h  Танк.cpp  Танк.h  Уровень.cpp  Уровень.h
исходник/Игра/ИгровыеОбъекты/: Земля.cpp  Земля.h  ИИгровыхОбъектов.cpp  ИИгровыхОбъектов.h  КирпичнаяСтена.cpp  КирпичнаяСтена.h  Танк.cpp  Танк.h
исходник/Рендор/: АнимацияСпрайт.cpp  АнимацияСпрайт.h  ВекторБуффер.cpp  ВекторБуффер.h  ВекторМножество.cpp  ВекторМножество.h  ИндексБуффер.cpp  ИндексБуффер.h  РасположениеВекторБуфера.cpp  РасположениеВекторБуфера.h  Рендор.cpp  Рендор.h  Спрайт.cpp  Спрайт.h  Текстуры2D.cpp  Текстуры2D.h  ШейдернаяПрограмма.cpp  ШейдернаяПрограмма.h
исходник/Ресерсы/: РесурсныйМенеджер.cpp  РесурсныйМенеджер.h
ресерсы/: ресерсы.json
ресерсы/Шейдор/: вСпринт.txt  вершина.txt  фСпринт.txt  фрогмент.txt
строить/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BattolCity.sln  BattolCity.vcxproj  BattolCity.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
строить/BattolCity.dir/Debug/: BattolCity.exe.recipe
строить/BattolCity.dir/Debug/BattolCity.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
строить/Debug/: BattolCity.ilk
строить/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
строить/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
строить/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
строить/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
строить/внешний/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  cmake_install.cmake
строить/внешний/glfw/src/: cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
строить/внешний/glfw/src/Debug/: glfw3.lib
строить/внешний/glfw/src/glfw.dir/Debug/: glfw3.lib.recipe
строить/внешний/glfw/src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glfw.lastbuildstate
стройка/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BattolCity.sln  BattolCity.vcxproj  BattolCity.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
стройка/BattolCity.dir/Debug/: BattolCity.exe.recipe
стройка/BattolCity.dir/Debug/BattolCity.tlog/: BattolCity.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
стройка/Debug/: BattolCity.ilk
стройка/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
стройка/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
